--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="/resources/scissors-solid.svg" type="image/x-icon">
     <title>Rock Paper Scissors</title>
 </head>
@@ -33,6 +33,6 @@
     <footer class="attribution">
         Coded by <a href="https://github.com/regina-cht" target="_blank">Regina Chavarín</a>.
     </footer>
-    <script src="app.js" charset="UTF-8"></script>
+    <script src="./app.js" charset="UTF-8"></script>
 </body>
 </html>
